--- a/index.html
+++ b/index.html
@@ -18,21 +18,22 @@
 <body>
 
  <!-- navigation code here -->
-  <section class="container nav-area">
+  <div class="main-nav-wrapper">
+    <section class="container nav-area">
 
-    <div class="site-name">
-      <h1>SpaceWalkers</h1>
-    </div>
-    <nav class="nav-links">
-      <a href="#">Home</a>
-      <a href="#">About Us</a>
-      <a href="#">Blog</a>
-      <a href="#">Contact</a>
-      <a href="#">Sign In</a>
-    </nav>
+      <div class="site-name">
+        <h1>SpaceWalkers</h1>
+      </div>
+      <nav class="nav-links">
+        <a href="#">Home</a>
+        <a href="#">About Us</a>
+        <a href="#">Blog</a>
+        <a href="#">Contact</a>
+        <a href="#">Sign In</a>
+      </nav>
 
-  </section>
-
+    </section>
+  </div>
   <div class="container home">
 
     <header class="intro">
